--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -198,7 +198,7 @@
                         <span id="role"></span>
                     </div>
                     <button id="btn-team-info"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1541022175/at-stake/icons/teaminfo.svg"></button>
-                    <button id="btn-call-vote"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1541097057/at-stake/icons/calltovote.svg"></button>
+                    <button id="btn-call-vote" class="disabled" disabled="disabled"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1541097057/at-stake/icons/calltovote.svg"></button>
                                         
                 </footer>
 
