--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -141,10 +141,10 @@
 		'player:updatedata',
 		'player:callvote',
 		'player:vote',
-
 		'players:ready',
 		'players:voted',
-
+		'player:show_event',
+		
 		'game:error',
 		'game:tutorial',
 		'game:intro',
@@ -155,7 +155,7 @@
 		'game:next_screen',
 		'game:next_round',
 		'game:next_item',
-		'game:skip_rules',
+		// 'game:skip_rules',
 		'game:ending',
 		'game:ended',
 		'game:end',
@@ -174,6 +174,7 @@
 		'game:refresh_screen',
 		'game:ready',
 		'game:team_info',
+		'game:event',
 
 		'game:rank_next',
 		'game:rank_prev',
@@ -378,9 +379,9 @@
 	        var newScreen = $('.screen:not(.skip)')[0];
 	        $(newScreen).trigger('show');
 
-	        runMods();
+			runMods();
 			
-	    });
+		});
 
 	}
 
