--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -31,6 +31,11 @@ button {
 	border: none;
 }
 
+h1 {
+	font-family: $header-type;
+	font-size: 18px;
+}
+
 #wrapper {
 	@include box-shadow(0px, 0px, 37px, black);
 	background-color: $background-color;
