Updated icons, added timer for deliberate, added try again button for vote caller, re-tooled flow for voting to rating, added start over button at end. Functionally working deliberate phase, numerous UI fixes.

--- a/public/styles/_core/mixins.scss
+++ b/public/styles/_core/mixins.scss
@@ -350,4 +350,5 @@ $mq-desktop				: 1382px !default;
 @mixin semibold-type {
     font-family: $body-type;
     font-size: 13px;
+    font-weight: 600;
 }
