--- a/templates/partials/shared/vote.hbs
+++ b/templates/partials/shared/vote.hbs
@@ -1,6 +1,6 @@
 {{!-- VOTING UI --}}
 <div id="vote">
-	<div class="form">
+	<div id="content" class="content decider">
 
 		{{> component/instructions 
 				decider=true
@@ -8,32 +8,53 @@
 				body="Listen to the proposal. If it passes, you will have to rate it."
 		}}
 
-		{{> component/instructions 
-				heading="Call To Vote"
-				body="Listen to the proposal. Decide if the proposal fits your needs."
-		}}
-
 		{{> component/speech
 				decider=true
 				body="Problem Scenario"
 				secondary=question
-				scenario=true
+				bold=true
 		}}
 
-        {{{cloudinaryUrl 'v1540488090/at-stake/icons/ballotbox' format='svg'}}}
-        
-        <h1>{{username}} called a vote!</h1>
-        <h2>Are you satisfied with this proposal?</h2>
+
+		{{{cloudinaryUrl 'v1541693946/at-stake/icons/ballotbox-black' width=200 format='png'}}}
+
+		<h1>{{username}} called a vote!</h1>
+
+	</div>
+
+	<div class="player form">
+
+		{{> component/instructions 
+				heading="Call To Vote"
+				body="Listen to the proposal. Decide if the proposal fits your needs."
+		}}
+		<div id="content" class="content">
+
+			{{{cloudinaryUrl 'v1541693946/at-stake/icons/ballotbox' width=200 format='png'}}}
+						
+			<h1>{{username}} called a vote!</h1>
+			<h2>Are you satisfied with this proposal?</h2>
+			
+			<button id="btn-yes" class="btn submit player" type="submit" name="submit" data-event="player:vote" data-package="yes">
+				Yes
+			</button>
+			
+			<button id="btn-no" class="btn submit player" type="submit" name="submit" data-event="player:vote" data-package="no">
+				No
+			</button>
+
+		</div>
+
+	</div>
+
+	<div id="results" class="content player">
+
+		<h1>Not everyone agreed with the proposal.</h1>
+		Revise your proposal and submit again.
 		
-		<button id="btn-yes" class="btn submit player" type="submit" name="submit" data-event="player:vote" data-package="yes">
-			Yes
-		</button>
-		
-		<button id="btn-no" class="btn submit player" type="submit" name="submit" data-event="player:vote" data-package="no">
-			No
+		<button id="btn-try-again" class="btn player" type="submit" name="submit">
+			Try Again
 		</button>
 
-		<h3 id="yes">Vote passed.</h3>
-		<h3 id="no">Vote did not pass.</h3>
 	</div>
 </div>
